--- a/PEC1_Ej2_3/index.html
+++ b/PEC1_Ej2_3/index.html
@@ -63,7 +63,7 @@
     </li>
 
     <li>
-        <div class="seat ocuupied"></div>
+        <div class="seat ocupied"></div>
         <small>Ocuppied</small> 
     </li>
 </ul>
@@ -73,20 +73,9 @@
 <div class="container">
     <div class="screen"></div>
         <div class="row">
+            <div class="seat occupied"></div>
             <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-        </div>
-
-        <div class="row">
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
+            <div class="seat" ></div>
             <div class="seat"></div>
             <div class="seat"></div>
             <div class="seat"></div>
@@ -98,7 +87,7 @@
             <div class="seat"></div>
             <div class="seat"></div>
             <div class="seat"></div>
-            <div class="seat"></div>
+            <div class="seat occupied"></div>
             <div class="seat"></div>
             <div class="seat"></div>
             <div class="seat"></div>
@@ -108,7 +97,18 @@
         <div class="row">
             <div class="seat"></div>
             <div class="seat"></div>
+            <div class="seat occupied"></div>
             <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat occupied"></div>
+            <div class="seat"></div>
+        </div>
+
+        <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat occupied"></div>
             <div class="seat"></div>
             <div class="seat"></div>
             <div class="seat"></div>
